// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchProduct Search Should render found products list. 1`] = `
<div>
  <h3>Rechercher un produit</h3>
  <!----> <input id="product-search" type="text" placeholder="Rechercher un produit">
  <ul>
    <li class="product">abc</li>
  </ul>
</div>
`;

exports[`SearchProduct Should render. 1`] = `
<div>
  <h3>Rechercher un produit</h3>
  <!----> <input id="product-search" type="text" placeholder="Rechercher un produit">
  <ul></ul>
</div>
`;
